syntax = "proto2";

package com.ilmservice.personalbudget;

option java_package = "com.ilmservice.personalbudget.protobufs";

import "Data.proto";

message Event {
  optional uint32 userId = 2;
  optional int64 date = 3;
  oneof event_type {
     UploadSpreadsheetEvent uploadSpreadsheetEvent = 10;
     SortTransactionEvent sortTransactionEvent = 11;
  }
}

message UploadSpreadsheetEvent {
  enum SpreadsheetSource {
      UNKNOWN = 0;
      BREMER = 1;
      GNUCASH_CUSTOM = 2;
      GNUCASH_ASSET_EXPORT = 3;
  }
  optional SpreadsheetSource source = 2;
  optional string filename = 3;
  repeated SpreadsheetRow rows = 4;
}

message SpreadsheetRow {
  optional int32 index = 2;
  repeated string fields = 1;
}

message SortTransactionEvent {
  optional Transaction transaction = 1;
  optional TransactionCategory category = 3;
}